refactor: update DTO imports and restructure response classes, clean code